--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,16 +9,16 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Cache Primes
-      id: cache-primes
-      uses: actions/cache@v1
-      with:
-        path: prime-numbers
-        key: ${{ runner.os }}-primes
 
-    - name: Generate Prime Numbers
-      if: steps.cache-primes.outputs.cache-hit != 'true'
-      run: /generate-primes.sh -d prime-numbers
-    
-    - name: Use Prime Numbers
-      run: /primes.sh -d prime-numbers
+    - name: Cache node modules
+      id: mycache
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+    - name: install
+      if: steps.mycache.outputs.cache-hit != 'true'
+      run : npm install
